Editing settings of database on prod

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -34,7 +34,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:postgresql://localhost:5432/cursoJenkinsJhipster
     username: cursoJenkinsJhipster
-    password:
+    password: cursoJenkinsJhipster
     hikari:
       poolName: Hikari
       auto-commit: false
